--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </p>
       <p class="time">1:00pm - 4:00pm</p>
       <p class="bday-description">
-        Absolute vibes. The plan is some light beers and chill hanging out. 
+        The plan is some light beers and chill hanging out. 
         Maybe hit up that boardwalk arcade. Who knows? 
       </p>
     </div>
@@ -37,9 +37,7 @@
       </p>
       <p class="time">4:30pm - 6:00pm</p>
       <p class="bday-description">
-        Good food to get us prepped for the pregaming and heavy drinking.
-        Please let me know if you are joining so I can know how many seats 
-        to reserve. 
+        Good food to get us prepped for the pregaming and heavy drinking. 
         <img src="./assets/burger.gif" alt="Burger GIF" width="240" height="180">
       </p>
     </div>
@@ -50,7 +48,7 @@
       </p>
       <p class="time">7:30pm - 8:30pm</p>
       <p class="bday-description">
-        A few drinks at my place to get started. Then a little squad uber ride.
+        A few drinks at my place (location subject to change) to get started. Then a little squad uber ride.
       </p>
     </div>
 
